@@ -695,10 +695,19 @@ Specifies a font for the label of the node.
 
 </DD>
 </DL>
+<DL><DT><A NAME="-helpcmd"><B>-helpcmd</B></A></DT>
+<DD>
+
+If specified, refers to a command to execute to get the help text to display.
+The command must return a string to display.
+If the command returns an empty string, no help is displayed. 
+See also <A HREF="DynamicHelp.html">DynamicHelp</A>.
+</DD>
+</DL>
 <DL><DT><A NAME="-helptext"><B>-helptext</B></A></DT>
 <DD>
 
-Text for dynamic help. If empty, no help is available for this widget.
+Text for dynamic help.
 See also <A HREF="DynamicHelp.html">DynamicHelp</A>.
 </DD>
 </DL>
